# ArgCat

./: .gitignore  Jenkinsfile  LICENSE  README.md  README_v0.3.md  README_v0.4.md  __init__.py  argcat.py  argnifest.yml  hello_cat.py  hello_cat.yml  hello_cat_build.py  hello_chore.py  hellocat.py
examples/: hello_argcat.py  hello_argcat_build.py  hello_argcat_handler.py  hello_argcat_handler_provider.py  hello_argparse.py
package/: setup.cfg
unitests/: argcat_unittest.py  test_build.py  test_handler.py  test_parse_args.py
unitests/test_build/: test_build.py
unitests/test_handler/: test_handler.py
unitests/test_load/: incorrect.yml  test_load.py
unitests/test_parse_args/: parse_args.yml  test_parse_args.py
