[metadata]
name = argcat
version = 0.4.3
author = Chunxi Xin
author_email = chx1n.d@gmail.com
description = A cute helper for argparse in Python 3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dex1n/ArgCat
project_urls =
    Bug Tracker = https://github.com/dex1n/ArgCat/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src